--- a/s3prl/downstream/voxceleb1/config.yaml
+++ b/s3prl/downstream/voxceleb1/config.yaml
@@ -16,7 +16,7 @@ runner:
 optimizer:
   name: TorchOptim
   torch_optim_name: Adam
-  lr: 1.0e-4
+  lr: 1.0e-2 #1.0e-4
 
 # # comment the whole scheduler config block to disable learning rate scheduling
 # scheduler:
@@ -25,8 +25,8 @@ optimizer:
 
 downstream_expert: 
   datarc:
-    file_path: /path/to/VoxCeleb1
-    meta_data: ./downstream/voxceleb1/veri_test_class.txt
+    file_path: /gscratch/tial/data/VoxCeleb1
+    meta_data: /gscratch/tial/data/VoxCeleb1/voxceleb_preprocessing/iden_split.txt
     num_workers: 12
     train_batch_size: 8
     eval_batch_size: 1
